@@ -7,5 +7,9 @@
 /* use required functions */
 
 /* redirect */
-if($settings['version'] < VERSION) { header("Location: upgrade/"); }
+if($settings['version'] < VERSION) { 
+	if(defined('BASE')) { header("Location: ".BASE."upgrade/"); }
+	else 				{ header("Location: /upgrade/");} 
+	die();
+}
 ?>
